--- a/engines/commercial/app/views/commercial/contracts/edit.html.haml
+++ b/engines/commercial/app/views/commercial/contracts/edit.html.haml
@@ -4,7 +4,7 @@
       %header.panel-heading
         %h5.title 
           %b Editar contrato
-      .panel-body
+      .portlet-body
         .row
           .col-md-12
             = render 'form'
