--- a/engines/deal/app/views/deal/purchases/edit.html.haml
+++ b/engines/deal/app/views/deal/purchases/edit.html.haml
@@ -1,11 +1,9 @@
 .row
   .col-sm-12
-    %section.panel
-      %header.panel-heading
-        .title 
-          Editar Compra
-        %hr/
-      .panel-body
+    .portlet.portlet-boxed
+      .portlet-header
+        %h4.portlet-title  Editar compra
+      .portlet-body
         .row
           .col-md-12
             = render 'form'
