--- a/engines/deal/app/views/deal/purchases/index.html.haml
+++ b/engines/deal/app/views/deal/purchases/index.html.haml
@@ -1,15 +1,13 @@
 .row
   .col-sm-12
-    %section.panel
-      %header.panel-heading
-        .title 
-          Resumo de Compras
-          = link_to "Nova Compra", new_purchase_path, class: 'pull-right'
-        %hr/
-      .panel-body
+    .portlet.portlet-boxed
+      .portlet-header
+        %h4.portlet-title Resumo de Compras
+        = link_to "Nova Compra", new_purchase_path, class: 'pull-right'
+      .portlet-body
         .row
           .col-md-12
-            = simple_form_for purchases_path, method: :get do |f|
+            = simple_form_for url_for, method: :get do |f|
               .row
                 .col-md-2
                   = f.input :date_start, label: "Data início", input_html: { name: 'period[date_start]', class: 'date', value: (params[:period].present?) ? params[:period][:date_start] : Date.today.beginning_of_month.strftime('%d/%m/%Y')} 
@@ -19,8 +17,9 @@
                   = f.input :contract, as: :select, label: "Contrato", collection: Commercial::Contract.all.order(:title).map { |key| [key.title.upcase, key.id]}, selected: params[:by_contract], include_blank: "Todos", input_html: { name: 'by_contract' }
                 .col-md-2
                   = f.input :status, as: :select, label: "Situação", collection: Deal::Purchase.statuses.map { |key, value| [key.upcase, value]}, selected: params[:status], include_blank: "Todos", input_html: { name: 'status' }
-                .col-md-2{style: 'margin-top: 30px'}
-                  = f.submit "Filtrar Compras", name: nil, class: 'btn btn-success'
+                .col-md-2{style: 'margin-top: 25px'}
+                  = f.submit "Filtrar Compras", name: nil, class: 'btn btn-secondary btn-sm'
+        %hr/
         .row
           .col-md-12
             %table.table.table-condensed.table-hover.table-bordered.table-striped.datatable
@@ -49,11 +48,11 @@
                     %td= number_to_currency purchase.purchase_items.sum(:total_value)
                     %td= purchase.created_at.strftime('%d/%m/%Y')
                     %td.col-md-2
-                      = link_to '', purchase, class: 'btn btn-alt2 btn-sm s7-info', title: "Visualizar"
-                      = link_to '', edit_purchase_path(purchase), class: 'btn btn-success btn-sm s7-edit', title: "Editar"
-                      = link_to '', purchase_path(purchase), method: :delete, data: {confirm: t(:confirm_destroy)}, class: 'btn btn-danger btn-sm s7-trash', title: "Remover"
-                      = link_to '', purchase_fpa_path(purchase), target: '_blank', class: 'btn btn-sm btn-alt3 s7-news-paper', title: "FPA"
-                      = link_to '', purchase_path(purchase), class: 'btn btn-sm btn-alt3 s7-news-paper', title: "Ordem de Compra"
+                      = link_to '', purchase, class: 'btn btn-xs btn-secondary glyphicon glyphicon-share', title: "Visualizar"
+                      = link_to '', edit_purchase_path(purchase), class: 'btn btn-xs btn-success glyphicon glyphicon-pencil', title: "Editar"
+                      = link_to '', purchase_path(purchase), method: :delete, data: {confirm: t(:confirm_destroy)}, class: 'btn btn-xs btn-danger glyphicon glyphicon-remove', title: "Remover"
+                      = link_to '', purchase_fpa_path(purchase), target: '_blank', class: 'btn btn-xs btn-warning glyphicon glyphicon-share-alt', title: "FPA"
+                      /= link_to '', purchase_path(purchase), class: 'btn btn-warning glyphicon glyphicon-info', title: "Ordem de Compra"
               %tfoot 
                 %tr
                   %th{colspan: 2}= link_to 'exportar para csv', purchases_path(format: :csv)
