--- a/app/views/layouts/session.html.haml
+++ b/app/views/layouts/session.html.haml
@@ -3,11 +3,8 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title Entherm - Engenharia de sistemas termomecânicos
-    = stylesheet_link_tag 'session', media: 'all', 'data-turbolinks-track' => true
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tags
-  %body.am-splash-screen
-    .am-wrapper.am-login
-      .am-content
-        .main-content
-          = yield
-    = javascript_include_tag 'session', 'data-turbolinks-track' => true
+  %body
+    = yield
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
