--- a/app/views/layouts/_subnav.html.haml
+++ b/app/views/layouts/_subnav.html.haml
@@ -60,14 +60,14 @@
                 %ul.mega-menu-menu
                   %li.mega-menu-header Pesquisa
                   %li
-                    %a{:href => "deal.fpa_purchase_path", :target => "_blank"}
+                    %a{:href => "#", :target => "_blank"}
                       Pesquisa FPA
                   %li
                     %a{:href => "#"}
                       Pesquisa por produto
                   %li
                     %a{:href => "#{deal.suppliers_path}"}
-                      Pesquisa por fornecedor
+                      Fornecedores
                       
               .mega-menu-col
                 %ul.mega-menu-menu
