--- a/engines/dashboard/app/views/dashboard/generals/index.html.haml
+++ b/engines/dashboard/app/views/dashboard/generals/index.html.haml
@@ -3,9 +3,9 @@
     .icon-stat
       .row
         .col-xs-8.text-left
-          %span.icon-stat-label Revenue
+          %span.icon-stat-label Contas à pagar
           / /.icon-stat-label
-          %span.icon-stat-value $5,367
+          %span.icon-stat-value R$ 0,00
           / /.icon-stat-value
         / /.col-xs-8
         .col-xs-4.text-center
@@ -15,16 +15,16 @@
       / /.row
       .icon-stat-footer
         %i.fa.fa-clock-o
-        Updated Now
+        Período [01/01/2016 - 01/01/2016]
     / /.icon-stat
   / /.col-md-3
   .col-md-3.col-sm-6
     .icon-stat
       .row
         .col-xs-8.text-left
-          %span.icon-stat-label Total Sales
+          %span.icon-stat-label Contas à receber
           / /.icon-stat-label
-          %span.icon-stat-value 473
+          %span.icon-stat-value R$ 0,00
           / /.icon-stat-value
         / /.col-xs-8
         .col-xs-4.text-center
@@ -34,16 +34,16 @@
       / /.row
       .icon-stat-footer
         %i.fa.fa-clock-o
-        Updated Now
+        Período [01/01/2016 - 01/01/2016]
     / /.icon-stat
   / /.col-md-3
   .col-md-3.col-sm-6
     .icon-stat
       .row
         .col-xs-8.text-left
-          %span.icon-stat-label Referrals
+          %span.icon-stat-label Total em compras
           / /.icon-stat-label
-          %span.icon-stat-value 78
+          %span.icon-stat-value R$ 0,00
           / /.icon-stat-value
         / /.col-xs-8
         .col-xs-4.text-center
@@ -53,16 +53,16 @@
       / /.row
       .icon-stat-footer
         %i.fa.fa-clock-o
-        Updated Now
+        Período [01/01/2016 - 01/01/2016]
     / /.icon-stat
   / /.col-md-3
   .col-md-3.col-sm-6
     .icon-stat
       .row
         .col-xs-8.text-left
-          %span.icon-stat-label Inquiries
+          %span.icon-stat-label Total de compras
           / /.icon-stat-label
-          %span.icon-stat-value 39
+          %span.icon-stat-value 0
           / /.icon-stat-value
         / /.col-xs-8
         .col-xs-4.text-center
@@ -72,42 +72,7 @@
       / /.row
       .icon-stat-footer
         %i.fa.fa-clock-o
-        Updated Now
+        Período [01/01/2016 - 01/01/2016]
     / /.icon-stat
   / /.col-md-3
 / /.row
-.row
-  .col-md-4.col-sm-5
-    .portlet.portlet-boxed
-      .portlet-header
-        %h4.portlet-title
-          Daily Stats
-      / /.portlet-header
-      .portlet-body{:style => "min-height: 400px;"}
-        %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, fugiat, dolores, laborum sit.
-        %hr
-          %table.table.keyvalue-table
-            %tbody
-              %tr
-                %td.kv-key
-                  %i.fa.fa-dollar.kv-icon.kv-icon-primary
-                  Revenue
-                %td.kv-value $5,367
-              %tr
-                %td.kv-key
-                  %i.fa.fa-gift.kv-icon.kv-icon-secondary
-                  Total Sales
-                %td.kv-value 473
-              %tr
-                %td.kv-key
-                  %i.fa.fa-exchange.kv-icon.kv-icon-tertiary>
-                  Referrals
-                %td.kv-value 78
-              %tr
-                %td.kv-key
-                  %i.fa.fa-envelope-o.kv-icon.kv-icon-default
-                  Inquiries
-                %td.kv-value 39
-      / /.portlet-body
-    / /.portlet
-  / /.col
