alteração de perfil

--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -17,7 +17,7 @@
               %i.fa.fa-caret-down
           %ul.dropdown-menu{:role => "menu"}
             %li
-              %a{:href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-profile.html"}
+              %a{:href => "#{main_app.edit_general_profile_path(current_user)}"}
                 Meu perfil
             %li.divider
             %li
