--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,6 +5,7 @@
  *= require analytics/stylesheets/font-awesome.min
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  *= require jquery-ui/autocomplete
+ *= require analytics/stylesheets/custom
  */
 
 
