--- a/app/views/layouts/_subnav.html.haml
+++ b/app/views/layouts/_subnav.html.haml
@@ -101,16 +101,16 @@
                 %ul.mega-menu-menu
                   %li.mega-menu-header Interno
                   %li
-                    %a{:href => "#"}
+                    %a{:href => "#{finance.payables_path}"}
                       Contas à pagar
                   %li
-                    %a{:href => "#"}
+                    %a{:href => "#{finance.receivables_path}"}
                       Contas à receber
                   %li
-                    %a{:href => "#"}
+                    %a{:href => "#{finance.cost_centers_path}"}
                       Centro de custos
                   %li
-                    %a{:href => "#"}
+                    %a{:href => "#{finance.bill_categories_path}"}
                       Categoria de contas
                 %ul.mega-menu-menu
                   %li.mega-menu-header Gestão
